<resources>
    <string name="app_name">BSG Kali Werra Tiefenort</string>
    <string name="online_shop">Online-Shop</string>
    <string name="sponsoren_partner"><![CDATA[Sponsoren & Partner]]></string>
    <string name="ber_uns">Über Uns</string>
    <string name="kontakt">Kontakt</string>
    <string name="datenschutz">Datenschutz</string>
    <string name="impressum">Impressum</string>
    <string name="mannschaften">Mannschaften</string>
    <string name="verein">Verein</string>
    <string name="neuigkeiten">Neuigkeiten</string>
    <string name="tiefenort">Tiefenort</string>
    <string name="bsg_kali_werra">BSG Kali Werra</string>
    <string name="beim">bei der</string>
    <string name="willkommen">Willkommen</string>
    <string name="Mannschaften_Header">AUF DIE TRADITION BEDACHT UND DIE ZUKUNFT FEST IM BLICK – FUSSBALL BEI der BSG KALI WERRA TIEFENORT</string>
    <string name="Mannschaften_Einleitung">Mit Spaß, Spielidee und Leidenschaft wurde in Tiefenort Fußball gespielt – und das bereits seit 1913. Zwanzig Jahre Zweitliga-Fußball im Kaffeetälchen – atemberaubende Momente. Auch wenn die letzten Jahrzehnte sportlich einer Berg- und Talfahrt glichen, treibt uns ein Ziel weiterhin an: GEMEINSAM wollen wir wieder ERFOLGREICH sein. Für den Sport, für den Verein, für die Region. Werde auch du ein Teil unserer Gemeinschaft, denn wir alle sind Kali Werra!


Die Nachwuchsförderung ist der wichtigste Baustein für eine erfolgreiche Zukunft.



Deshalb hat es sich die BSG Kali Werra Tiefenort zur Aufgabe gemacht, die Jugend leistungsorientiert zu fördern und ihr eine Perspektive zu bieten. Diesem Leitgedanken folgte 2022 die Gründung des Nachwuchszentrums Kali Werra zusammen mit den umliegenden Vereinen der Krayenberg-Region, um ein qualitativ und quantitativ hochwertiges Entwicklungspotenzial aufbieten zu können. In der Spielzeit 2023/24 stellt das Nachwuchszentrum Kali Werra elf Kinder- und Jugendmannschaften zum regelmäßigen Spielbetrieb.</string>
    <string name="_1_herren_mannschaft">1. Herren Mannschaft</string>
    <string name="mehr">mehr</string>
    <string name="Mannschaften_Einleitung_Kurz">Mit Spaß, Spielidee und Leidenschaft wurde in Tiefenort Fußball gespielt – und das bereits seit 1913. ...</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bob">Bob</string>
    <string name="home">Home</string>
    <string name="mannschaft">Mannschaft</string>
    <string name="angaben_gem_5_tmg">Angaben gemäß § 5 TMG</string>
    <string name="anschrift">
BSG Kali Werra Tiefenort e.V.
Kaffeetälchen 3
36469  Bad Salzungen OT Tiefenort

Vereinsregister: 300135
Registergericht: Bad Salzungen

Vertreten durch den Vorstand:
Markus Peter (Vorstandsvorsitzender)</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="back">Back</string>
    <string name="send">Send</string>
    <string name="logout">Logout</string>
    <string name="du_hast_ein_anliegen_dann_schreibe_uns_eine_nachricht_wir_sind_unter_folgenden_email_adressen_zu_erreichen">Du hast ein Anliegen? Dann schreibe uns eine Nachricht. Wir sind unter folgenden Email-Adressen zu erreichen:</string>
    <string name="allgemeine_anfragen">Allgemeine Anfragen</string>
    <string name="kali_werra_tiefenort_outlook_de">kali-werra-tiefenort@outlook.de</string>
    <string name="spielbetrieb_herren">Spielbetrieb Herren</string>
    <string name="spielbetrieb_nachwuchs">Spielbetrieb Nachwuchs</string>
    <string name="nachwuchs_kali_werra_de">nachwuchs@kali-werra.de</string>
    <string name="verwaltung">Verwaltung</string>
    <string name="vermarktung_kali_werra_de">vermarktung@kali-werra.de</string>
    <string name="sponsoring">Sponsoring</string>
    <string name="anfahrt">Anfahrt</string>
    <string name="tv_Anfahrt_PKW">Mit dem Auto: Kaffeetälchen 3, 36469 Tiefenort | Parken i.d.R. direkt im Waldstadion Kaffeetälchen möglich, ansonsten im unteren Teil der Waldstraße.</string>
    <string name="tv_Anfahrt_Bahn">Mit der Bahn: Süd-Thüringen-Bahn bis zur Haltestelle Oberrohn, danach zu Fuß ungefähr 45 Minuten (Strecke: circa 3 km) über den Wald-Wanderweg.</string>
    <string name="schlie_en">Schließen</string>
    <string name="fsv_kali_werra_tiefenort_e_v_kaffeet_lchen_3_36469_bad_salzungen_ot_tiefenort_vereinsregister_300135_registergericht_bad_salzungen_vertreten_durch_den_vorstand_markus_peter_vorstandsvorsitzender">BSG Kali Werra Tiefenort e.V. Kaffeetälchen 3 36469 Bad Salzungen OT Tiefenort Vereinsregister: 300135 Registergericht: Bad Salzungen Vertreten durch den Vorstand: Markus Peter (Vorstandsvorsitzender)</string>
    <string name="name">BSG Kali Werra Tiefenort e.V</string>
    <string name="strasse">Kaffeetälchen 3</string>
    <string name="ort">36469 Bad Salzungen OT Tiefenort</string>
    <string name="vereinsregister">Vereinsregister: 300135</string>
    <string name="registergericht">Registergericht: Bad Salzungen</string>
    <string name="vertreten_durch_den_vorstand">Vertreten durch den Vorstand:</string>
    <string name="markus_peter_vorstandsvorsitzender">Markus Peter (Vorstandsvorsitzender)</string>
    <string name="verantwortlich_f_r_den_inhalt_nach_55_abs_2_rstv">Verantwortlich für den Inhalt nach § 55 Abs. 2 RStV</string>
    <string name="wir_sind_nicht_bereit_oder_verpflichtet_an_streitbeilegungsverfahren_vor_einer_verbraucherschlichtungsstelle_teilzunehmen">Wir sind nicht bereit oder verpflichtet, an Streitbeilegungsverfahren vor einer Verbraucherschlichtungsstelle teilzunehmen.</string>
    <string name="haftung_f_r_inhalte">Haftung für Inhalte</string>
    <string name="haftung">Als Diensteanbieter sind wir gemäß § 7 Abs.1 TMG für eigene Inhalte auf diesen Seiten nach den allgemeinen Gesetzen verantwortlich. Nach §§ 8 bis 10 TMG sind wir als Diensteanbieter jedoch nicht verpflichtet, übermittelte oder gespeicherte fremde Informationen zu überwachen oder nach Umständen zu forschen, die auf eine rechtswidrige Tätigkeit hinweisen. Verpflichtungen zur Entfernung oder Sperrung der Nutzung von Informationen nach den allgemeinen Gesetzen bleiben hiervon unberührt. Eine diesbezügliche Haftung ist jedoch erst ab dem Zeitpunkt der Kenntnis einer konkreten Rechtsverletzung möglich. Bei Bekanntwerden von entsprechenden Rechtsverletzungen werden wir diese Inhalte umgehend entfernen.</string>
    <string name="haftung_f_r_links">Haftung für Links</string>
    <string name="haftung_links">Unser Angebot enthält Links zu externen Websites Dritter, auf deren Inhalte wir keinen Einfluss haben. Deshalb können wir für diese fremden Inhalte auch keine Gewähr übernehmen. Für die Inhalte der verlinkten Seiten ist stets der jeweilige Anbieter oder Betreiber der Seiten verantwortlich. Die verlinkten Seiten wurden zum Zeitpunkt der Verlinkung auf mögliche Rechtsverstöße überprüft. Rechtswidrige Inhalte waren zum Zeitpunkt der Verlinkung nicht erkennbar. Eine permanente inhaltliche Kontrolle der verlinkten Seiten ist jedoch ohne konkrete Anhaltspunkte einer Rechtsverletzung nicht zumutbar. Bei Bekanntwerden von Rechtsverletzungen werden wir derartige Links umgehend entfernen.</string>
    <string name="urheberrecht">Urheberrecht</string>
    <string name="urheberrecht_inhalt">Die durch die Seitenbetreiber erstellten Inhalte und Werke auf diesen Seiten unterliegen dem deutschen Urheberrecht. Die Vervielfältigung, Bearbeitung, Verbreitung und jede Art der Verwertung außerhalb der Grenzen des Urheberrechtes bedürfen der schriftlichen Zustimmung des jeweiligen Autors bzw. Erstellers. Downloads und Kopien dieser Seite sind nur für den privaten, nicht kommerziellen Gebrauch gestattet. Soweit die Inhalte auf dieser Seite nicht vom Betreiber erstellt wurden, werden die Urheberrechte Dritter beachtet. Insbesondere werden Inhalte Dritter als solche gekennzeichnet. Sollten Sie trotzdem auf eine Urheberrechtsverletzung aufmerksam werden, bitten wir um einen entsprechenden Hinweis. Bei Bekanntwerden von Rechtsverletzungen werden wir derartige Inhalte umgehend entfernen. Quelle: https://www.e-recht24.de/impressum-generator.html</string>
    <string name="gl_ck_auf_vereinsmitglieder_und_sportkameraden">Glück Auf, Vereinsmitglieder und Sportkameraden!</string>
    <string name="einleitung">Auf dieser Seite findet ihr Informationen wie zum Beispiel geplante Veranstaltungen, Aufgaben und Aktivitäten unseres Vereines. Damit wir uns in allen Belangen stetig verbessern können, benötigen wir eure Hilfe in Form von Eigeninitiative. Nutzt das Kontaktformular und teilt uns eure Vorschläge, Wünsche, Kritik oder auch Lob rund um unseren Verein und das Waldstadion Kaffeetälchen mit. Wir nehmen dabei sämtliche Anregungen auf und ihr bekommt in jedem Fall eine Rückmeldung von uns.</string>
    <string name="Datenschutzerklärung">Ich habe die Datenschutzerklärung gelesen und bin damit einverstanden.</string>
    <string name="senden">Senden</string>
    <string name="mitglied_werden">Unterstütze den Tiefenorter Fußball und werde Mitglied in unserem Verein!</string>
    <string name="nachricht">Nachricht</string>
    <string name="name_name">Name</string>
    <string name="werde_ein_teil_von_kali_werra">Werde ein Teil von Kali Werra!</string>
    <string name="online_mitgliedsantrag">Online-Mitgliedsantrag</string>
    <string name="vorname">Vorname</string>
    <string name="geburtsdatum">Geburtsdatum</string>
    <string name="stra_e">Straße</string>
    <string name="hausnummer">Hausnummer</string>
    <string name="postleitzahl">Postleitzahl</string>
    <string name="wohnort">Wohnort</string>
    <string name="beruf">Beruf</string>
    <string name="telefon">Telefon</string>
    <string name="iban">IBAN</string>
    <string name="bic">BIC</string>
    <string name="kontoinhaber">Kontoinhaber</string>
    <string name="mitgliedsbekundung">Mitgliedsbekundung</string>
    <string name="mitgliedsbekundung_text">Ich habe das 18. Lebensjahr vollendet oder die Zustimmung eines gesetzlichen Vertreters eingeholt und bekunde hiermit meinen Eintritt als Mitglied des Sportvereins FSV Kali Werra Tiefenort e.V.</string>
    <string name="beitragseinzug">Beitragseinzug</string>
    <string name="beitragseinzug_text">Ich ermächtige die BSG Kali Werra Tiefenort e.V., Zahlungen von meinem Konto mittels Lastschrift einzuziehen. Zugleich weise ich mein Kreditinstitut an, die von der BSG Kali Werra Tiefenort e.V. auf mein Konto gezogenen Lastschriften einzulösen. Hinweis: Ich kann innerhalb von acht Wochen, beginnend mit dem Belastungsdatum, die Erstattung des belasteten Betrags verlangen. Es gelten dabei die mit meinem Kreditinstitut vereinbarten Bedingungen.</string>
    <string name="einwilligung_personendaten">Einwilligung Personendaten</string>
    <string name="datenschutzhinweis">Datenschutzhinweis</string>
    <string name="Spielerlaubnis">Um aktiv am Spielbetrieb teilnehmen zu können, benötigen wir zusätzlich noch den vollständig ausgefüllten <font color='red'>Antrag auf Spielerlaubnis</font>, eine Kopie der Geburtsurkunde, sowie ein Passbild des Mitglieds. Diese Unterlagen sind zeitnah in den entsprechenden Postkasten im Sportlerheim im Waldstadion Kaffeetälchen einzuwerfen.</string>
    <string name="tabelle">zur aktuellen Tabelle</string>
    <string name="spiele">zu den Spielen</string>
    <string name="platz">Platz</string>
    <string name="team">Team</string>
    <string name="sp">Sp</string>
    <string name="g">G</string>
    <string name="v">V</string>
    <string name="u">U</string>
    <string name="td">TD</string>
    <string name="punkte">Punkte</string>
    <string name="startseite">Startseite</string>
    <string name="speichern">Speichern</string>
    <string name="bitte_vornamen_eingeben">Bitte Vornamen eingeben</string>
    <string name="bitte_nachname_eingeben">Bitte Nachname eingeben</string>
</resources>