<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.StartseiteFragment">


    <ImageView
        android:id="@+id/LogoHome"
        android:layout_width="150dp"
        android:layout_height="180dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:alpha="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/ivVereinsLogos"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/LogoHome" />

    <Button
        android:id="@+id/Impressum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="8dp"
        android:alpha="1"
        android:backgroundTint="@color/white"
        android:text="@string/impressum"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/facebook" />

    <Button
        android:id="@+id/datenschutz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:alpha="1"
        android:backgroundTint="@color/white"
        android:text="@string/datenschutz"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/kontakt"
        app:layout_constraintStart_toEndOf="@+id/Impressum"
        app:layout_constraintTop_toBottomOf="@+id/fussballde" />

    <Button
        android:id="@+id/kontakt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="8dp"
        android:alpha="1"
        android:backgroundTint="@color/white"
        android:text="@string/kontakt"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/instagram" />

    <ImageView
        android:id="@+id/facebook"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="72dp"
        app:layout_constraintBottom_toBottomOf="@+id/fussballde"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/facebook_icon" />

    <ImageView
        android:id="@+id/fussballde"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toStartOf="@+id/instagram"
        app:layout_constraintTop_toBottomOf="@+id/onlineShop"
        app:layout_constraintStart_toEndOf="@+id/facebook"
        app:srcCompat="@drawable/fussball_de"/>

    <ImageView
        android:id="@+id/instagram"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="72dp"
        app:layout_constraintBottom_toBottomOf="@+id/fussballde"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/instagram_logo_2016" />

    <TextView
        android:id="@+id/onlineShop"
        style="@style/Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:alpha="1"
        android:autoLink="web"
        android:text="@string/online_shop"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Sponsoren" />

    <TextView
        android:id="@+id/Sponsoren"
        style="@style/Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:alpha="1"
        android:text="@string/sponsoren_partner"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ueberUns" />

    <TextView
        android:id="@+id/ueberUns"
        style="@style/Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:alpha="1"
        android:text="@string/ber_uns"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mannschaften" />

    <TextView
        android:id="@+id/mannschaften"
        style="@style/Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:alpha="1"
        android:text="@string/mannschaften"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/verein" />

    <TextView
        android:id="@+id/verein"
        style="@style/Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:alpha="1"
        android:text="@string/verein"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/neuigkeiten" />

    <TextView
        android:id="@+id/neuigkeiten"
        style="@style/Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:alpha="1"
        android:text="@string/neuigkeiten"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivVereinsLogos" />

    <ImageView
        android:id="@+id/ivMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/menu_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>